[gd_scene format=3 uid="uid://dncuhwxfmtqd1"]

[ext_resource type="Script" uid="uid://d37junt5bj7xp" path="res://nodes/interactable/tablet/tablet.gd" id="1_gel1g"]
[ext_resource type="Texture2D" uid="uid://dotlasqpyb06p" path="res://assets/hallway/tablet_full.png" id="2_djgad"]
[ext_resource type="FontFile" uid="uid://dy46du8y2i8ig" path="res://assets/fonts/PixelifySans-Regular.ttf" id="3_3dq7t"]

[sub_resource type="Animation" id="Animation_djgad"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(68.221, 131.057)]
}

[sub_resource type="Animation" id="Animation_n7xfm"]
resource_name = "slide_down"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(68.221, 12.097), Vector2(68.221, 131.057)]
}

[sub_resource type="Animation" id="Animation_3dq7t"]
resource_name = "slide_up"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(68.221, 131.057), Vector2(68.221, 12.097)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n7xfm"]
_data = {
&"RESET": SubResource("Animation_djgad"),
&"slide_down": SubResource("Animation_n7xfm"),
&"slide_up": SubResource("Animation_3dq7t")
}

[node name="Tablet" type="Control" unique_id=1830436011]
layout_mode = 3
anchors_preset = 0
scale = Vector2(5.686785, 5.1437516)
script = ExtResource("1_gel1g")

[node name="Texture" type="TextureRect" parent="." unique_id=1979642441]
texture_filter = 1
layout_mode = 0
offset_left = 68.221
offset_top = 131.057
offset_right = 237.22104
offset_bottom = 346.0573
scale = Vector2(0.39065093, 0.4792262)
texture = ExtResource("2_djgad")

[node name="AnimationTree" type="AnimationPlayer" parent="Texture" unique_id=1467455427]
libraries/ = SubResource("AnimationLibrary_n7xfm")

[node name="Task1" type="Label" parent="Texture" unique_id=1191206605]
z_index = 10
texture_filter = 1
layout_mode = 0
offset_left = 38.730568
offset_top = 50.65892
offset_right = 78.730576
offset_bottom = 73.65892
theme_override_fonts/font = ExtResource("3_3dq7t")
theme_override_font_sizes/font_size = 12
text = "Text"

[node name="Task2" type="Label" parent="Texture" unique_id=1397228050]
z_index = 10
texture_filter = 1
layout_mode = 0
offset_left = 39.180706
offset_top = 65.668945
offset_right = 79.18071
offset_bottom = 88.668945
theme_override_fonts/font = ExtResource("3_3dq7t")
theme_override_font_sizes/font_size = 12
text = "Text"

[node name="Task3" type="Label" parent="Texture" unique_id=904448839]
z_index = 10
texture_filter = 1
layout_mode = 0
offset_left = 38.73056
offset_top = 81.49032
offset_right = 78.73056
offset_bottom = 104.49032
theme_override_fonts/font = ExtResource("3_3dq7t")
theme_override_font_sizes/font_size = 12
text = "Text"
